@@ -1,3 +1,14 @@
+2011-03-03  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] QWebFrame::setUrl works only from second time if url fragment is present
+        https://bugs.webkit.org/show_bug.cgi?id=32723
+
+        Create an auto-test for Qt based on the bug description.
+
+        * tests/qwebframe/tst_qwebframe.cpp: add setUrlWithFragment() test.
+
 2011-03-03  Brady Eidson  <beidson@apple.com>
 
         Reviewed by Darin Adler.
